# UPL

./: .gitignore  LICENSE  README.md
doc/ru/: Readme.md  Reference.md  TheoreticalBasis.md
example/ConceptPrinter/project/cmake/: CMakeLists.txt
example/ConceptPrinter/project/qbs/: ConceptPrinter.qbs
example/ConceptPrinter/src/: main.cpp
example/TransferUnique/project/cmake/: CMakeLists.txt
example/TransferUnique/project/qbs/: TransferUnique.qbs
example/TransferUnique/src/: main.cpp
example/WeakUnique/project/cmake/: CMakeLists.txt
example/WeakUnique/project/qbs/: WeakUnique.qbs
example/WeakUnique/src/: main.cpp
include/upl/: pointer.h
include/upl/v0_1/: access.h  bind.h  concept.h  concrete.h  exception.h  pointer.h  tag.h  trait.h
include/upl/v0_1/concrete/: default.h  narrow.h  wide.h
include/upl/v0_1/detail/: bind.h  comparison.h  counted.h  hash.h  std_smart.h  swap.h  trait.h
include/upl/v0_1/detail/counted/: bind.h  concrete.h  trait.h
include/upl/v0_1/detail/counted/source/: Comparison.h  Counted.h  Hash.h  Swap.h
include/upl/v0_1/detail/std_smart/: bind.h  concrete.h  trait.h
include/upl/v0_1/detail/std_smart/source/: Comparison.h  Hash.h  StdSmart.h  (+1 more)
include/upl/v0_1/utility/: concept.h  itself.h  unique_carrier.h
include/upl/v0_2/: access.h  concept.h  conform.h  exception.h  tag.h  trait.h
include/upl/v0_2/detail/: assembly.h  bind.h  concrete.h  trait.h
include/upl/v0_2/detail/internal/: comparison.h  hash.h  pointer.h  swap.h
include/upl/v0_2/utility/: itself.h  unique_carrier.h
project/CMake/: CMakeLists.txt
project/Qbs/: Upl.Core.qbs
project/Uncrustify/: Upl.uncrustify.cfg
project/cmake/: CMakeLists.txt  Example.txt  Upl.txt
project/qbs/: Example.qbs  Upl.qbs  UplComplex.qbs
(+2 files in other folders)
